--- a/e3-content-service/pom.xml
+++ b/e3-content-service/pom.xml
@@ -1,20 +1,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
-        <artifactId>e3-parent</artifactId>
+        <artifactId>e3-content</artifactId>
         <groupId>cn.e3mall</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../e3-manager/pom.xml</relativePath>
+        <relativePath>../e3-content/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>e3-manager-web</artifactId>
+    <artifactId>e3-content-service</artifactId>
     <packaging>war</packaging>
-    <name>e3-manager-web Maven Webapp</name>
+    <name>e3-content-service Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
             <groupId>cn.e3mall</groupId>
-            <artifactId>e3-manager-interface</artifactId>
+            <artifactId>e3-manager-dao</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -22,15 +22,6 @@
             <artifactId>e3-content-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- spring的依赖 -->
         <!-- Spring -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -60,40 +51,18 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
         </dependency>
-        <!-- JSP相关 -->
-        <dependency>
-            <groupId>jstl</groupId>
-            <artifactId>jstl</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jsp-api</artifactId>
-            <scope>provided</scope>
-        </dependency>
-
-        <!-- 文件上传组件 -->
-        <dependency>
-            <groupId>commons-fileupload</groupId>
-            <artifactId>commons-fileupload</artifactId>
-        </dependency>
-
         <!-- dubbo相关 -->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>dubbo</artifactId>
             <exclusions>
                 <exclusion>
-                    <groupId>org.springframework</groupId>
                     <artifactId>spring</artifactId>
+                    <groupId>org.springframework</groupId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.jboss.netty</groupId>
                     <artifactId>netty</artifactId>
+                    <groupId>org.jboss.netty</groupId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -105,27 +74,9 @@
             <groupId>com.github.sgroschupf</groupId>
             <artifactId>zkclient</artifactId>
         </dependency>
-        <dependency>
-            <groupId>fastdfs_client</groupId>
-            <artifactId>fastdfs_client</artifactId>
-            <version>1.25</version>
-        </dependency>
 
     </dependencies>
-
     <build>
-        <finalName>e3-manager-web</finalName>
-        <plugins>
-            <!-- 配置Tomcat插件 -->
-            <plugin>
-                <groupId>org.apache.tomcat.maven</groupId>
-                <artifactId>tomcat7-maven-plugin</artifactId>
-                <configuration>
-                    <path>/</path>
-                    <port>8081</port>
-                </configuration>
-            </plugin>
-        </plugins>
-
+        <finalName>e3-content-service</finalName>
     </build>
 </project>
